tests/ui/attributes/unsafe/unsafe-safe-attribute.rs
#[unsafe(repr(C))] //~ ERROR: is not an unsafe attribute
struct Foo {}

fn main() {}
